# DSCI_524_Group_18

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: ci-cd.yml
.virtual_documents/: Untitled.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/collinearity_tool/: collinearity_tool.py  corr_matrix.py  vif_bar_plot.py
tests/: test_collinearity_tool.py
