[tool.poetry]
name = "collinearity_tool"
version = "0.1.0"
description = "Identify multicollinearity issues by correlation, VIF, and visualizations."
authors = ["Anahita Einolghozati, Chaoran Wang, Katia Aristova, Lisheng Mao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
