[tool.poetry]
name = "collinearity_tool"
version = "0.1.0"
description = "Identify multicollinearity issues by correlation, VIF, and visualizations."
authors = ["Anahita Einolghozati, Chaoran Wang, Katia Aristova, Lisheng Mao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
altair = "^4.2.0"
pandas = "^1.3.5"
numpy = "^1.22.1"
patsy = "^0.5.2"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
